--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,3 +26,6 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+      
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
