--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,5 +27,13 @@ jobs:
     - name: Test
       run: go test -v ./...
       
+    - name: Run tests and collect coverage
+      run: pytest --cov .
+      
     - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
+      run: |
+        # Replace `linux` below with the appropriate OS
+        # Options are `alpine`, `linux`, `macos`, `windows`
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov -t ${CODECOV_TOKEN}
