--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,9 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    
+    - name: Install requirements
+      run: pip install -r requirements.txt
       
     - name: Run tests and collect coverage
       run: pytest --cov .
