--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,16 +27,8 @@ jobs:
     - name: Test
       run: go test -v ./...
     
-    - name: Install requirements
-      run: pip install -r requirements.txt
-      
-    - name: Run tests and collect coverage
-      run: pytest --cov .
-      
-    - name: Upload coverage reports to Codecov
-      run: |
-        # Replace `linux` below with the appropriate OS
-        # Options are `alpine`, `linux`, `macos`, `windows`
-        curl -Os https://uploader.codecov.io/latest/linux/codecov
-        chmod +x codecov
-        ./codecov -t ${CODECOV_TOKEN}
+    - name: Run coverage
+      run: go test -race -coverprofile=coverage.out -covermode=atomic
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
